--- a/src/cards/styles.scss
+++ b/src/cards/styles.scss
@@ -38,8 +38,8 @@ $card-y-margin: 0.25rem;
 .cards__new-card {
   @extend .cards__card;
   margin: $card-y-margin 0.5rem 0.5rem;
-}
 
-.cards__card-textarea {
-  text-align: center;
+  .field-editor .cards__card-textarea {
+    text-align: center;
+  }
 }
